--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>fifahistory-alpha</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -48,14 +47,14 @@
             <version>2.6.3</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
         </dependency>
 
-
-
     </dependencies>
+
+
 
 
     <build>
