Enviroment configuration: -Add Hibernate 4 to persist database

--- a/src/main/webapp/WEB-INF/db.properties
+++ b/src/main/webapp/WEB-INF/db.properties
@@ -1,4 +1,4 @@
-db.driver=org.gjt.mm.mysql.Driver
+db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/AlphaFifaHistory
 db.username=root
 db.password=root
